--- a/styles/style.css
+++ b/styles/style.css
@@ -60,8 +60,6 @@ main, html {
     align-items: center;
 }
 
-
-
 .xmas-items {
     display: flex;
     flex-direction: row;
@@ -116,7 +114,8 @@ main, html {
 .ranking {
     /* border: 1px black solid; */
     margin: 0;
-    padding-right: 20px;
+    padding: 5px 20px 0 20px;
+    color: white;
 }
 
 .tv-show {
